# duckdb-from-zero

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
contracts/: duckdb-rust-v1.yaml
crates/duckdb-reports/: Cargo.toml  README.md
crates/duckdb-reports/src/: lib.rs  main.rs
crates/duckdb-reports/tests/: cli.rs  integration.rs
scripts/: demo-1-tour.sh  demo-2-pagila.sh  demo-3-tpch.sh  demo-4-rust.sh  demo-all.sh  fetch-data.sh  tour.sh  verify.sh
sql/: 01-tour.sql  02-files-as-tables.sql  03-tpch-q1.sql
sql/pagila-analytics/: top-actors.sql  top-customers.sql  top-films.sql
sql/tpch/: q01.sql  q02.sql  q03.sql  q04.sql  q05.sql  q06.sql  q07.sql  q08.sql  q09.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q20.sql  q21.sql  q22.sql
